<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.90"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.80"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.60"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn0"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonCero"
        app:layout_constraintBottom_toTopOf="@+id/guideH1"
        app:layout_constraintEnd_toStartOf="@+id/guideV3"
        app:layout_constraintStart_toEndOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComa"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonComa"
        app:layout_constraintBottom_toTopOf="@+id/guideH1"
        app:layout_constraintEnd_toStartOf="@+id/guideV4"
        app:layout_constraintStart_toEndOf="@+id/guideV3"
        app:layout_constraintTop_toTopOf="@+id/guideH2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIgual"
        style="@style/simboloBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonIgual"
        app:layout_constraintBottom_toTopOf="@+id/guideH1"
        app:layout_constraintEnd_toStartOf="@+id/guideV5"
        app:layout_constraintStart_toStartOf="@+id/guideV4"
        app:layout_constraintTop_toTopOf="@+id/guideH2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonUno"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonDos"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV3"
        app:layout_constraintStart_toStartOf="@+id/guideV2"
        app:layout_constraintTop_toTopOf="@+id/guideH3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonTres"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV4"
        app:layout_constraintStart_toStartOf="@+id/guideV3"
        app:layout_constraintTop_toTopOf="@+id/guideH3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlus"
        style="@style/simboloBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonSuma"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV5"
        app:layout_constraintStart_toStartOf="@+id/guideV4"
        app:layout_constraintTop_toTopOf="@+id/guideH3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonCuatro"
        app:layout_constraintBottom_toTopOf="@+id/guideH3"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn5"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonCinco"
        app:layout_constraintBottom_toTopOf="@+id/guideH3"
        app:layout_constraintEnd_toStartOf="@+id/guideV3"
        app:layout_constraintStart_toStartOf="@+id/guideV2"
        app:layout_constraintTop_toTopOf="@+id/guideH4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonSeis"
        app:layout_constraintBottom_toTopOf="@+id/guideH3"
        app:layout_constraintEnd_toStartOf="@+id/guideV4"
        app:layout_constraintStart_toStartOf="@+id/guideV3"
        app:layout_constraintTop_toTopOf="@+id/guideH4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMenos"
        style="@style/simboloBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonResta"
        app:layout_constraintBottom_toTopOf="@+id/guideH3"
        app:layout_constraintEnd_toStartOf="@+id/guideV5"
        app:layout_constraintStart_toStartOf="@+id/guideV4"
        app:layout_constraintTop_toTopOf="@+id/guideH4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn7"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonSiete"
        app:layout_constraintBottom_toTopOf="@+id/guideH4"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn8"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonOcho"
        app:layout_constraintBottom_toTopOf="@+id/guideH4"
        app:layout_constraintEnd_toStartOf="@+id/guideV3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideV2"
        app:layout_constraintTop_toTopOf="@+id/guideH5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn9"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonNueve"
        app:layout_constraintBottom_toTopOf="@+id/guideH4"
        app:layout_constraintEnd_toStartOf="@+id/guideV4"
        app:layout_constraintStart_toStartOf="@+id/guideV3"
        app:layout_constraintTop_toTopOf="@+id/guideH5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMulti"
        style="@style/simboloBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonMulti"
        app:layout_constraintBottom_toTopOf="@+id/guideH4"
        app:layout_constraintEnd_toStartOf="@+id/guideV5"
        app:layout_constraintStart_toStartOf="@+id/guideV4"
        app:layout_constraintTop_toTopOf="@+id/guideH5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLimpiar"
        style="@style/numeroBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonLimpiar"
        app:layout_constraintBottom_toTopOf="@+id/guideH5"
        app:layout_constraintEnd_toStartOf="@+id/guideV4"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH6" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/simboloBtn"
        android:id="@+id/btnDivid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/botonDivi"
        app:layout_constraintBottom_toTopOf="@+id/guideH5"
        app:layout_constraintEnd_toStartOf="@+id/guideV5"
        app:layout_constraintStart_toStartOf="@+id/guideV4"
        app:layout_constraintTop_toTopOf="@+id/guideH6"/>

    <View
        android:id="@+id/separador"
        style="@style/separador"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideH1"
        app:layout_constraintEnd_toEndOf="@+id/guideV4"
        app:layout_constraintStart_toStartOf="@+id/guideV4"
        app:layout_constraintTop_toTopOf="@+id/guideH6" />

    <TextView
        android:id="@+id/pantalla"
        style="@style/numeroPantalla"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/botonCero"
       android:gravity="center|end"
        app:layout_constraintBottom_toTopOf="@+id/guideH6"
        app:layout_constraintEnd_toEndOf="@+id/guideV5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideH7" />

</androidx.constraintlayout.widget.ConstraintLayout>